disks/pcx86/dos/ibm/5.02/README.md
---
layout: page
title: IBM PC DOS 5.02
permalink: /disks/pcx86/dos/ibm/5.02/
machines:
  - id: ibm5170-pcdos502
    type: pcx86
    debugger: true
    config: /devices/pcx86/machine/5170/ega/2048kb/rev3/machine.xml
    autoMount:
      A:
        name: PC DOS 5.02 (Disk 1)
      B:
        name: None
---

IBM PC DOS 5.02
---------------

PC DOS 5.02 was released in September 1992.

A [Feature Summary](#feature-summary), along with [Directory Listings](#directory-of-pc-dos-502-disk-1) of the three
720Kb distribution diskettes, are provided below.

{% include machine.html id="ibm5170-pcdos502" %}

### Feature Summary

New external commands:

- DRVLOCK
- EJECT
- INTERLNK
- INTERSVR
- MOUSE
- POWER

New device drivers:

- CMOSCLK.SYS
- INTERLNK.EXE
- POWER.EXE

New support files:

- EGAX.CPI
- ISO.CPI

New functions:

- INT 2Fh multiplex functions 54h (POWER) and 56h (INTERLNK)

### Directory of PC DOS 5.02 (Disk 1)

	 Volume in drive A is DISK      1
	 Volume Serial Number is 2608-2110

	Directory of A:\

	IBMBIO   COM     33718 09-01-92  12:00p
	IBMDOS   COM     37362 09-01-92  12:00p
	AUTOEXEC BAT        36 09-01-92  12:00p
	COMMAND  COM     47990 09-01-92  12:00p
	CONFIG   SYS        23 09-01-92  12:00p
	COUNTRY  SYS     17330 09-01-92  12:00p
	EGA      SY_      4108 09-01-92  12:00p
	KEYB     COM     15339 09-01-92  12:00p
	KEYBOARD SYS     41710 09-01-92  12:00p
	NLSFUNC  EXE      7007 09-01-92  12:00p
	SETUP    EXE     81727 09-01-92  12:00p
	SETUP    INI      2265 09-01-92  12:00p
	CV       COM       716 09-01-92  12:00p
	DISPLAY  SY_     11178 09-01-92  12:00p
	EGA      CP_     19691 09-01-92  12:00p
	HIMEM    SY_      7954 09-01-92  12:00p
	MODE     CO_     16900 09-01-92  12:00p
	SETVER   EX_      7440 09-01-92  12:00p
	ANSI     SY_      7170 09-01-92  12:00p
	DEBUG    CO_     16882 09-01-92  12:00p
	EDLIN    CO_     10416 09-01-92  12:00p
	EMM386   EX_     47696 09-01-92  12:00p
	FASTOPEN EX_      8899 09-01-92  12:00p
	FDISK    COM     54793 09-01-92  12:00p
	FORMAT   COM     34415 09-01-92  12:00p
	MIRROR   CO_     12787 09-01-92  12:00p
	RAMDRIVE SY_      3737 09-01-92  12:00p
	SHARE    EX_      9280 09-01-92  12:00p
	SMARTDRV SY_      6289 09-01-92  12:00p
	SYS      CO_      9662 09-01-92  12:00p
	UNDELETE EX_      9390 09-01-92  12:00p
	UNFORMAT COM     18576 09-01-92  12:00p
	XCOPY    EX_     11864 09-01-92  12:00p
	PRINT    CO_     11029 09-01-92  12:00p
	       34 file(s)     625379 bytes

	Total files listed:
	       34 file(s)     625379 bytes
	                       87040 bytes free

### Directory of PC DOS 5.02 (Disk 2)

	 Volume in drive A is DISK      2
	 Volume Serial Number is 4838-300E

	Directory of A:\

	DOSKEY   CO_      4730 09-01-92  12:00p
	CGA      GR_      1768 09-01-92  12:00p
	CGA      IN_      3335 09-01-92  12:00p
	CGA      VI_      6920 09-01-92  12:00p
	DOSSHELL CO_      2315 09-01-92  12:00p
	DOSSHELL EX_    156389 09-01-92  12:00p
	DOSSWAP  EX_     15478 09-01-92  12:00p
	EGA      GR_      2729 09-01-92  12:00p
	EGA      IN_      3336 09-01-92  12:00p
	EGA      VI_      7012 09-01-92  12:00p
	EGAMONO  GR_      2564 09-01-92  12:00p
	HERC     GR_      1809 09-01-92  12:00p
	HERC     VI_      6998 09-01-92  12:00p
	MONO     GR_       301 09-01-92  12:00p
	MONO     IN_      2992 09-01-92  12:00p
	PACKING  LST      2703 09-01-92  12:00p
	VGA      GR_      3593 09-01-92  12:00p
	VGA      IN_      3344 09-01-92  12:00p
	VGA      VI_      7238 09-01-92  12:00p
	VGAMONO  GR_      3605 09-01-92  12:00p
	APPNOTES TXT      8493 09-01-92  12:00p
	DOSHELP  HL_      3034 09-01-92  12:00p
	DOSSHELL HL_     54369 09-01-92  12:00p
	EDIT     HL_     17322 09-01-92  12:00p
	HELP     EX_      9032 09-01-92  12:00p
	RECOVER  CO_      7532 09-01-92  12:00p
	QBASIC   HL_    122321 09-01-92  12:00p
	EDIT     COM       413 09-01-92  12:00p
	MONEY    BA_     14911 09-01-92  12:00p
	MSHERC   CO_      4444 09-01-92  12:00p
	QBASIC   EX_    212036 09-01-92  12:00p
	       31 file(s)     693066 bytes

	Total files listed:
	       31 file(s)     693066 bytes
	                       21504 bytes free

### Directory of PC DOS 5.02 (Disk 3)

	 Volume in drive A is DISK      3
	 Volume Serial Number is 2909-310E

	Directory of A:\

	GORILLA  BA_     11956 09-01-92  12:00p
	4201     CP_      7912 09-01-92  12:00p
	4208     CP_       376 09-01-92  12:00p
	5202     CP_       315 09-01-92  12:00p
	PPDS     CP_       316 09-01-92  12:00p
	APPEND   EX_      8454 09-01-92  12:00p
	ASSIGN   CO_      5208 09-01-92  12:00p
	ATTRIB   EX_     12338 09-01-92  12:00p
	BACKUP   CO_     25391 09-01-92  12:00p
	CHKDSK   CO_     12690 09-01-92  12:00p
	COMP     CO_      9694 09-01-92  12:00p
	DISKCOMP CO_      7645 09-01-92  12:00p
	DISKCOPY CO_      8383 09-01-92  12:00p
	DRIVER   SY_      4565 09-01-92  12:00p
	FC       EX_     12882 09-01-92  12:00p
	FIND     EX_      5532 09-01-92  12:00p
	GRAFTABL CO_      8119 09-01-92  12:00p
	GRAPHICS CO_     12905 09-01-92  12:00p
	LABEL    CO_      6828 09-01-92  12:00p
	MORE     CO_      2304 09-01-92  12:00p
	NIBBLES  BA_      8241 09-01-92  12:00p
	REMLINE  BA_      4998 09-01-92  12:00p
	RESTORE  CO_     25456 09-01-92  12:00p
	SORT     EX_      4980 09-01-92  12:00p
	WINA20   38_      3214 09-01-92  12:00p
	EXE2BIN  EX_      6854 09-01-92  12:00p
	EXPAND   EXE     13213 09-01-92  12:00p
	GRAPHICS PR_      5185 09-01-92  12:00p
	JOIN     EX_     13178 09-01-92  12:00p
	LOADFIX  CO_       704 09-01-92  12:00p
	PRINTER  SY_     12442 09-01-92  12:00p
	README   TXT     12855 09-01-92  12:00p
	REPLACE  EX_     14416 09-01-92  12:00p
	SUBST    EX_     13758 09-01-92  12:00p
	TREE     CO_      5436 09-01-92  12:00p
	MEM      EX_     30032 09-01-92  12:00p
	MOUSE    CO_     25560 09-01-92  12:00p
	CMOSCLK  SY_       925 09-01-92  12:00p
	BASIC    CO_       546 09-01-92  12:00p
	BASICA   CO_     59014 09-01-92  12:00p
	MEUTOINI EX_     20840 09-01-92  12:00p
	AUTOCONF EX_     21990 09-01-92  12:00p
	EGAX     CP_     14101 09-01-92  12:00p
	ISO      CP_     12664 09-01-92  12:00p
	POWER    EX_      6375 09-01-92  12:00p
	EJECT    EX_      5866 09-01-92  12:00p
	DRVLOCK  EX_      6808 09-01-92  12:00p
	INTERLNK EX_     12008 09-01-92  12:00p
	INTERSVR EX_     29529 09-01-92  12:00p
	PRINTFIX CO_        84 09-01-92  12:00p
	       50 file(s)     555085 bytes

	Total files listed:
	       50 file(s)     555085 bytes
	                      149504 bytes free
